[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/sprites/enemie/Enemy_3_Neon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Gros.gd" type="Script" id=2]
[ext_resource path="res://scenes/Projectile.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 376.34

[node name="Gros" type="KinematicBody2D"]
collision_layer = 24
collision_mask = 24
script = ExtResource( 2 )
Projectile = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( 0, 16, -32, 24, -32, 56, -48, 64, -64, -48, -40, -64, 40, -64, 64, -48, 48, 64, 32, 56, 32, 24 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Canon" type="Position2D" parent="."]
position = Vector2( 88, 0 )

[node name="Canon2" type="Position2D" parent="."]
position = Vector2( 88, 40 )

[node name="Canon3" type="Position2D" parent="."]
position = Vector2( 88, -40 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
